Upgraded to latest versions of all products used