@@ -15,30 +15,23 @@
  * LICENSE file.
  */
 
-package io.snappydata.benchmark
+package org.cassandra.benchmark
 
-import io.snappydata.adanalytics.{Configs, AvroSocketStreamConverter}
+import io.snappydata.adanalytics.{Configs, AdImpressionGenerator}
 import Configs._
 import io.snappydata.adanalytics.AdImpressionLog
 import org.apache.spark.sql.Row
 import org.apache.spark.storage.StorageLevel
 import org.apache.spark.streaming.SnappyStreamingContext
+import org.apache.spark.streaming.receiver.Receiver
 import org.apache.spark.{SparkConf, SparkContext}
 
-/**
-  * Simple Snappy streaming program which pulls log messages
-  * from socket and ingest those log messages to Snappy store.
-  */
-object SocketSnappyIngestionPerf extends App {
+object CustomReceiverSnappyIngestionPerf extends App {
 
   val sparkConf = new SparkConf()
     .setAppName(getClass.getSimpleName)
     .setMaster(s"$sparkMasterURL")
-    //.setMaster("snappydata://localhost:10334")
     .set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-    .set("spark.executor.extraJavaOptions",
-      " -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+AggressiveOpts -XX:FreqInlineSize=300 -XX:MaxInlineSize=300 ")
-    .set("spark.streaming.blockInterval", "50")
 
   val assemblyJar = System.getenv("PROJECT_ASSEMBLY_JAR")
   if (assemblyJar != null) {
@@ -47,16 +40,13 @@ object SocketSnappyIngestionPerf extends App {
   }
 
   val sc = new SparkContext(sparkConf)
-
   val snsc = new SnappyStreamingContext(sc, batchDuration)
 
   snsc.snappyContext.dropTable("adImpressions", ifExists = true)
 
-  val converter = new AvroSocketStreamConverter
+  val stream = snsc.receiverStream[AdImpressionLog](new AdImpressionReceiver)
 
-  val logStream = snsc.socketStream[AdImpressionLog](hostname, socketPort, converter.convert, StorageLevel.MEMORY_ONLY)
-
-  val rows = logStream.map(v => Row(new java.sql.Timestamp(v.getTimestamp), v.getPublisher.toString,
+  val rows = stream.map(v => Row(new java.sql.Timestamp(v.getTimestamp), v.getPublisher.toString,
     v.getAdvertiser.toString, v.getWebsite.toString, v.getGeo.toString, v.getBid, v.getCookie.toString))
 
   val logStreamAsTable = snsc.createSchemaDStream(rows, getAdImpressionSchema)
@@ -68,4 +58,25 @@ object SocketSnappyIngestionPerf extends App {
 
   snsc.start()
   snsc.awaitTermination()
+
+}
+
+
+final class AdImpressionReceiver extends Receiver[AdImpressionLog](StorageLevel.MEMORY_AND_DISK_2) {
+  override def onStart() {
+    new Thread("AdImpressionReceiver") {
+      override def run() {
+        receive()
+      }
+    }.start()
+  }
+
+  override def onStop() {
+  }
+
+  private def receive() {
+    while (!isStopped()) {
+      store(AdImpressionGenerator.nextRandomAdImpression())
+    }
+  }
 }
